--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-speech-recognition": "^4.0.1"
+    "react-slick": "^0.30.3",
+    "react-speech-recognition": "^4.0.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
